--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
 
     <LinearLayout
         android:id="@+id/statusBar"
+        android:background="@color/red"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -32,13 +33,36 @@
             android:layout_marginTop="12dp"
             android:text="Disconnected"
             android:textStyle="bold"
-            android:textColor="#000"
+            android:textColor="#fff"
             android:textSize="20dp"/>
 
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/dataStore"
+        android:layout_below="@id/statusBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Data"
+        android:textSize="30dp"
+        android:textColor="@android:color/white"
+        android:textStyle="bold"/>
+
+    <Button
+        android:id="@+id/btStatus"
+        android:background="@color/dot_light_screen3"
+        android:layout_below="@id/statusBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:layout_centerHorizontal="true"
+        android:text="@string/status"
+        android:textColor="@android:color/white"
+        android:textStyle="bold" />
+
     <ImageView
         android:id="@+id/search"
+        android:layout_below="@id/btStatus"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:src="@drawable/ic_search_white_48dp"
