--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,12 +12,14 @@
     tools:context="com.meivaldi.phanalyst.MainActivity">
 
     <TextView
+        android:id="@+id/label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/bluetooth_tidak_terhubung"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="120dp"
         android:textColor="@android:color/white"
         android:textSize="30dp"
-        android:layout_above="@id/logo"
         tools:ignore="SpUsage" />
 
     <ImageView
@@ -28,7 +30,7 @@
         android:src="@drawable/ic_bluetooth_disabled_white_24dp"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:contentDescription=""
+        android:layout_below="@id/label"
         tools:ignore="ContentDescription" />
 
     <Button
