--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,62 +11,31 @@
     android:background="@color/bg_screen3"
     tools:context="com.meivaldi.phanalyst.MainActivity">
 
-    <LinearLayout
-        android:id="@+id/statusBar"
-        android:background="@color/red"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/bluetoothStatus"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginRight="20dp"
-            android:src="@drawable/ic_bluetooth_disabled_white_24dp"/>
-
-        <TextView
-            android:id="@+id/labelStatus"
-            android:gravity="center_vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:text="Disconnected"
-            android:textStyle="bold"
-            android:textColor="#fff"
-            android:textSize="20dp"/>
-
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/btStatus"
-        android:background="@color/dot_light_screen3"
-        android:layout_below="@id/statusBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:layout_centerHorizontal="true"
-        android:text="@string/status"
+        android:text="Bluetooth tidak terhubung"
         android:textColor="@android:color/white"
-        android:textStyle="bold" />
+        android:textSize="30dp"
+        android:layout_above="@id/search"/>
 
     <ImageView
         android:id="@+id/search"
-        android:layout_below="@id/btStatus"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:src="@drawable/ic_search_white_48dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginBottom="20dp"
+        android:src="@drawable/ic_bluetooth_disabled_white_24dp"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
     <Button
-        android:id="@+id/startProcess"
+        android:id="@+id/connect"
         android:layout_below="@id/search"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:background="@color/dot_light_screen3"
-        android:text="Mulai Menghitung"
+        android:text="Hubungkan Sekarang"
         android:textColor="#fff"
         android:textStyle="bold"/>
 
