--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,28 +14,31 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Bluetooth tidak terhubung"
+        android:text="@string/bluetooth_tidak_terhubung"
         android:textColor="@android:color/white"
         android:textSize="30dp"
-        android:layout_above="@id/search"/>
+        android:layout_above="@id/logo"
+        tools:ignore="SpUsage" />
 
     <ImageView
-        android:id="@+id/search"
+        android:id="@+id/logo"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginBottom="20dp"
         android:src="@drawable/ic_bluetooth_disabled_white_24dp"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:contentDescription=""
+        tools:ignore="ContentDescription" />
 
     <Button
         android:id="@+id/connect"
-        android:layout_below="@id/search"
+        android:layout_below="@id/logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:background="@color/dot_light_screen3"
-        android:text="Hubungkan Sekarang"
+        android:text="@string/hubungkan_sekarang"
         android:textColor="#fff"
         android:textStyle="bold"/>
 
