--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/bg_screen3"
     tools:context="com.meivaldi.phanalyst.MainActivity">
 
     <TextView
@@ -18,16 +17,16 @@
         android:text="@string/bluetooth_tidak_terhubung"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="120dp"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/black"
         android:textSize="30dp"
         tools:ignore="SpUsage" />
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
         android:layout_marginBottom="20dp"
-        android:src="@drawable/ic_bluetooth_disabled_white_24dp"
+        android:src="@drawable/not_connected"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/label"
