--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -31,8 +31,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:background="@null"
-        android:text="@string/next"
-        android:textColor="@android:color/white" />
+        android:text="@string/next" />
 
     <Button
         android:id="@+id/btn_skip"
@@ -41,7 +40,6 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:background="@null"
-        android:text="@string/skip"
-        android:textColor="@android:color/white" />
+        android:text="@string/skip" />
 
 </RelativeLayout>
