--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -18,6 +18,8 @@
             android:id="@+id/info"
             android:layout_width="40dp"
             android:layout_height="40dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
             android:src="@drawable/ic_info"/>
 
 </RelativeLayout>
