--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -5,6 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bg_screen3"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.meivaldi.phanalyst.ResultActivity">
 
     <TextView
@@ -30,7 +34,7 @@
         android:textColor="#fff"
         android:textSize="40dp"
         android:textStyle="bold"
-        android:text="6.0"/>
+        android:text="0.0"/>
 
     <LinearLayout
         android:id="@+id/buttonGroup"
